fixed accordionPanel sizing issue on mobile

--- a/myapp/public/stylesheets/accordian.css
+++ b/myapp/public/stylesheets/accordian.css
@@ -33,6 +33,7 @@
   
   /* Style the accordion panel. Note: hidden by default */
   .accordionPanel {
+    height: auto !important;
     margin: 0 auto;
     padding-top: 20px;
     padding-bottom: 20px;
